2012-01-10  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* latex/examples/testdoc.tex:
	  - Add ?` and !` test sequences.

2011-12-26  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* latex/examples/testdoc.tex:
	  - Use macros to generate duplicated texts.
	  - Use one-column layout and make poems two-column.
	  - Add more Latin characters to ligkern test.

2011-12-20  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* Makefile.am: Remove old CTAN/TDS zip files before zipping.

2011-12-19  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* Makefile.am: Move doc in TDS zip to doc/fonts/

2011-12-17  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* Makefile.am: Move source in TDS zip to source/fonts/

2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am: Use LATEX_PACKAGE for CTAN package names.

2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am: Add original source to TDS zip file.

2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Install LaTeX files under consistent subdir name.

	* configure.in: Define LATEX_PACKAGE macro.
	* Makefile.am: Set doc subdir to $(LATEX_PACKAGE).
	* latex/texfont.mk.am: Install LaTeX font files under $(LATEX_PACKAGE).
	* latex/Makefile.am: Install LaTeX stuff under $(LATEX_PACKAGE).

2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	  === Version 0.1.3 ===

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac:
	  - Remove checks for unused ttf tools.

2011-11-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am:
	  - Add dist-ctan targets.

2011-10-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* latex/fonts-arundina.sty, latex/ltharunsans.fd,
	  latex/ltharunmono.fd, latex/ltharunserif.fd:
	  - Add licensing header.
