@@ -1,3 +1,8 @@
+2012-02-09  Theppitak Karoonboonyanan <thep@linux.thai.net>
+
+	* Makefile.am:
+	  - Drop unneeded dist-ctan targets, as dist-tds already suffices.
+
 2012-01-10  Theppitak Karoonboonyanan <thep@linux.thai.net>
 
 	* latex/examples/testdoc.tex:
